[gd_scene load_steps=47 format=1]

[ext_resource path="res://owl/owl.gd" type="Script" id=1]
[ext_resource path="res://addons/net.kivano.fsm/content/fsm.gd" type="Script" id=2]
[ext_resource path="res://addons/net.kivano.fsm/assets/ico2d.png" type="Texture" id=3]
[ext_resource path="res://owl/FSM/states/idle/idle.tscn" type="PackedScene" id=4]
[ext_resource path="res://owl/FSM/states/move/move.tscn" type="PackedScene" id=5]
[ext_resource path="res://owl/FSM/states/fly_up/fly_up.tscn" type="PackedScene" id=6]
[ext_resource path="res://owl/FSM/states/fly_down/fly_down.tscn" type="PackedScene" id=7]
[ext_resource path="res://owl/FSM/states/dive/dive.tscn" type="PackedScene" id=8]
[ext_resource path="res://owl/FSM/states/rest/rest.tscn" type="PackedScene" id=9]
[ext_resource path="res://owl/FSM/states/dead/dead.tscn" type="PackedScene" id=10]
[ext_resource path="res://owl/FSM/states/dead/dead.gd" type="Script" id=11]
[ext_resource path="res://owl/FSM/transitions/dir_key_pressed/dir_key_pressed.tscn" type="PackedScene" id=12]
[ext_resource path="res://owl/FSM/transitions/flap_pressed/flap_pressed.tscn" type="PackedScene" id=13]
[ext_resource path="res://owl/FSM/transitions/is_falling/is_falling.tscn" type="PackedScene" id=14]
[ext_resource path="res://owl/FSM/transitions/touch_ground/touch_ground.tscn" type="PackedScene" id=15]
[ext_resource path="res://owl/FSM/transitions/has_stopped/has_stopped.tscn" type="PackedScene" id=16]
[ext_resource path="res://owl/FSM/transitions/flap_in_air/flap_in_air.tscn" type="PackedScene" id=17]
[ext_resource path="res://owl/FSM/transitions/is_diving/is_diving.tscn" type="PackedScene" id=18]
[ext_resource path="res://owl/FSM/transitions/not_diving/not_diving.tscn" type="PackedScene" id=19]
[ext_resource path="res://owl/FSM/transitions/in_house/in_house.tscn" type="PackedScene" id=20]
[ext_resource path="res://owl/FSM/transitions/falling_from_something/falling_from_something.tscn" type="PackedScene" id=21]
[ext_resource path="res://owl/2_by_kyasarinn-dbi8qan.png" type="Texture" id=22]
[ext_resource path="res://owl/3_by_kyasarinn-dbi8qab.png" type="Texture" id=23]
[ext_resource path="res://owl/4_by_kyasarinn-dbi8qa0.png" type="Texture" id=24]
[ext_resource path="res://owl/5_by_kyasarinn-dbi8q9m.png" type="Texture" id=25]
[ext_resource path="res://owl/6_by_kyasarinn-dbi8q9b.png" type="Texture" id=26]
[ext_resource path="res://owl/7_by_kyasarinn-dbi8q95.png" type="Texture" id=27]
[ext_resource path="res://owl/8_by_kyasarinn-dbi8q8u.png" type="Texture" id=28]
[ext_resource path="res://owl/owl-walk1.png" type="Texture" id=29]
[ext_resource path="res://owl/owl-walk2.png" type="Texture" id=30]
[ext_resource path="res://owl/owl-walk3.png" type="Texture" id=31]
[ext_resource path="res://sounds/fire.wav" type="Sample" id=32]
[ext_resource path="res://sounds/owl-splash.wav" type="Sample" id=33]
[ext_resource path="res://sounds/owl-step.wav" type="Sample" id=34]
[ext_resource path="res://sounds/owl-wings.wav" type="Sample" id=35]
[ext_resource path="res://owl/say.gd" type="Script" id=36]
[ext_resource path="res://fonts/ZillaSlab-Medium.ttf" type="DynamicFontData" id=37]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 22.0

[sub_resource type="Animation" id=2]

resource/name = "flap"
length = 0.7
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("carry/carry point:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 16, -1 ), Vector2( 14, -4 ), Vector2( 14, -4 ), Vector2( 8, -5 ), Vector2( 0, -14 ), Vector2( 11, -10 ), Vector2( 15, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SamplePlayer2D:play/play")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 2,
"values": [ "owl-wings", "" ]
}

[sub_resource type="Animation" id=3]

resource/name = "fly"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 22 ), ExtResource( 23 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("carry/carry point:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 16, -1 ), Vector2( 14, -4 ), Vector2( 14, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SamplePlayer2D:play/play")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray(  ),
"transitions": FloatArray(  ),
"update": 2,
"values": [  ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ ExtResource( 29 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("carry/carry point:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 16, -11 ) ]
}

[sub_resource type="Animation" id=5]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 31 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("carry/carry point:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16, -11 ), Vector2( 16, -10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SamplePlayer2D:play/play")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 2,
"values": [ "owl-step", "owl-step", "" ]
}

[sub_resource type="SampleLibrary" id=6]

samples/fire = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 32 )
}
samples/owl-splash = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 33 )
}
samples/owl-step = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 34 )
}
samples/owl-wings = {
"db": -12.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 35 )
}

[sub_resource type="DynamicFont" id=9]

font/size = 17
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 37 )

[sub_resource type="Animation" id=7]

resource/name = "hide"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("text:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "can_speak"
} ]
}

[sub_resource type="Animation" id=8]

resource/name = "show"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("text:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.3 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_timer"
} ]
}

[node name="owl" type="KinematicBody2D" groups=[
"player",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="FSM2D" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
path2LogicRoot = NodePath("..")
onlyActiveStateOnTheScene = true
initManually = false
updateMode = 2
"Initial state:" = "fly_down"
"Create new:/Subdirectory for FSM nodes:" = "FSM"
"Create new:/Create state with name:" = null
"Create new:/Create transition with name:" = null
GraphData = {
"dead": Vector2( 700, 71 ),
"dead_": Vector2( 700, 71 ),
"dir_key_pressed": Vector2( 506, 154 ),
"dir_key_pressed_": Vector2( 506, 154 ),
"dir_key_pressed__": Vector2( 506, 154 ),
"dive": Vector2( 800, 630 ),
"dive_": Vector2( 800, 630 ),
"dive__": Vector2( 800, 630 ),
"falling_from_something": Vector2( 778, 337 ),
"falling_from_something_": Vector2( 778, 337 ),
"falling_from_something__": Vector2( 778, 337 ),
"flap_in_air": Vector2( 318, 480 ),
"flap_in_air_": Vector2( 318, 480 ),
"flap_in_air__": Vector2( 318, 480 ),
"flap_in_motion": Vector2( 729, 345 ),
"flap_in_motion_": Vector2( 784, 269 ),
"flap_pressed": Vector2( 504, 294 ),
"flap_pressed_": Vector2( 504, 294 ),
"flap_pressed__": Vector2( 504, 294 ),
"fly_down": Vector2( 449, 569 ),
"fly_down_": Vector2( 449, 569 ),
"fly_down__": Vector2( 449, 569 ),
"fly_up": Vector2( 501, 384 ),
"fly_up_": Vector2( 501, 384 ),
"fly_up__": Vector2( 501, 384 ),
"has_stopped": Vector2( 505, 227 ),
"has_stopped_": Vector2( 505, 227 ),
"has_stopped__": Vector2( 505, 227 ),
"idle": Vector2( 239, 221 ),
"idle_": Vector2( 239, 221 ),
"idle__": Vector2( 239, 221 ),
"in_house": Vector2( 123, 81 ),
"in_house_": Vector2( 123, 81 ),
"in_house__": Vector2( 123, 81 ),
"is_diving": Vector2( 788, 555 ),
"is_diving_": Vector2( 788, 555 ),
"is_diving__": Vector2( 788, 555 ),
"is_falling": Vector2( 467, 478 ),
"is_falling_": Vector2( 467, 478 ),
"is_falling__": Vector2( 467, 478 ),
"move": Vector2( 856, 214 ),
"move_": Vector2( 856, 214 ),
"move__": Vector2( 856, 214 ),
"not_diving": Vector2( 572, 725 ),
"not_diving_": Vector2( 572, 725 ),
"not_diving__": Vector2( 572, 725 ),
"rest": Vector2( 334, 83 ),
"rest_": Vector2( 334, 83 ),
"rest__": Vector2( 334, 83 ),
"touch_ground": Vector2( 151, 671 ),
"touch_ground_": Vector2( 151, 671 ),
"touch_ground__": Vector2( 151, 671 )
}

[node name="States" type="Node2D" parent="FSM2D"]

[node name="idle" parent="FSM2D/States" instance=ExtResource( 4 )]

[node name="move" parent="FSM2D/States" instance=ExtResource( 5 )]

[node name="fly_up" parent="FSM2D/States" instance=ExtResource( 6 )]

[node name="fly_down" parent="FSM2D/States" instance=ExtResource( 7 )]

[node name="dive" parent="FSM2D/States" instance=ExtResource( 8 )]

[node name="rest" parent="FSM2D/States" instance=ExtResource( 9 )]

[node name="dead" type="Node" parent="FSM2D/States" instance=ExtResource( 10 )]

script/script = ExtResource( 11 )

[node name="Transitions" type="Node2D" parent="FSM2D"]

[node name="dir_key_pressed" parent="FSM2D/Transitions" instance=ExtResource( 12 )]

path2SourceStates = [ NodePath(""), NodePath("../../States/idle"), NodePath("../../States/rest") ]
path2TargetState = NodePath("../../States/move")

[node name="flap_pressed" parent="FSM2D/Transitions" instance=ExtResource( 13 )]

path2SourceStates = [ NodePath(""), NodePath("../../States/move"), NodePath("../../States/idle") ]
path2TargetState = NodePath("../../States/fly_up")

[node name="is_falling" parent="FSM2D/Transitions" instance=ExtResource( 14 )]

path2SourceStates = [ NodePath(""), NodePath("../../States/fly_up") ]
path2TargetState = NodePath("../../States/fly_down")

[node name="touch_ground" parent="FSM2D/Transitions" instance=ExtResource( 15 )]

path2SourceStates = [ NodePath(""), NodePath("../../States/fly_down"), NodePath("../../States/dive") ]
path2TargetState = NodePath("../../States/idle")

[node name="has_stopped" parent="FSM2D/Transitions" instance=ExtResource( 16 )]

path2SourceStates = [ NodePath(""), NodePath("../../States/move") ]
path2TargetState = NodePath("../../States/idle")

[node name="flap_in_air" parent="FSM2D/Transitions" instance=ExtResource( 17 )]

path2SourceStates = [ NodePath(""), NodePath("../../States/fly_down") ]
path2TargetState = NodePath("../../States/fly_up")

[node name="is_diving" parent="FSM2D/Transitions" instance=ExtResource( 18 )]

path2SourceStates = [ NodePath(""), NodePath("../../States/fly_up"), NodePath("../../States/fly_down") ]
path2TargetState = NodePath("../../States/dive")

[node name="not_diving" parent="FSM2D/Transitions" instance=ExtResource( 19 )]

path2SourceStates = [ NodePath(""), NodePath("../../States/dive") ]
path2TargetState = NodePath("../../States/fly_down")

[node name="in_house" parent="FSM2D/Transitions" instance=ExtResource( 20 )]

path2SourceStates = [ NodePath(""), NodePath("../../States/idle") ]
path2TargetState = NodePath("../../States/rest")

[node name="falling_from_something" parent="FSM2D/Transitions" instance=ExtResource( 21 )]

path2SourceStates = [ NodePath(""), NodePath("../../States/move") ]
path2TargetState = NodePath("../../States/fly_down")

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0.468667, 0 )
transform/scale = Vector2( 0.0626632, 0.0626632 )
texture = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -1500
limit/top = -10000000
limit/right = 1500
limit/bottom = 1000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 6.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="player_area" type="Area2D" parent="." groups=[
"player",
]]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D1" type="CollisionShape2D" parent="player_area"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="home arrow" type="Node2D" parent="."]

editor/display_folded = true

[node name="Polygon2D" type="Polygon2D" parent="home arrow"]

transform/rot = 180.0
transform/scale = Vector2( 0.333333, 0.666667 )
polygon = Vector2Array( -10, -60, 0, -80, 10, -60 )
uv = Vector2Array(  )
color = Color( 0.0898438, 1, 0.232056, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flap = SubResource( 2 )
anims/fly = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "fly"

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="carry" type="Node2D" parent="."]

[node name="carry point" type="Position2D" parent="carry"]

transform/pos = Vector2( 16, -1 )

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 6 )
config/pitch_random = 0.0

[node name="say" type="Node2D" parent="."]

z/z = 5
script/script = ExtResource( 36 )

[node name="text" type="Label" parent="say"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -111.0
margin/top = -77.0
margin/right = 115.0
margin/bottom = -32.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "WWW"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="say"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hide = SubResource( 7 )
anims/show = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="timeout" type="Timer" parent="say"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="stateChanged" from="FSM2D" to="." method="_on_FSM2D_stateChanged"]

[connection signal="area_enter" from="player_area" to="." method="_on_player_area_area_enter"]

[connection signal="area_exit" from="player_area" to="." method="_on_player_area_area_exit"]

[connection signal="timeout" from="say/timeout" to="say" method="_on_timeout_timeout"]


